midpoint-live-demo/kustomize-base/kubernetes-objects/apache/apache-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  annotations: 
    kubernetes.io/ingress.class: azure/application-gateway
spec:
#  ingressClassName: haproxy
  tls:
    - hosts:
        - demo.example.com
      secretName: cert-mp-demo
  rules:
    - host: demo.example.com
      http:
        paths:
          - path: /library
            pathType: Prefix
            backend:
              service:
                name: apache-service
                port:
                  number: 80
